--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "grunt": "^1.0.3",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-reload": "^0.2.0"
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
